# deepiri-zepgpu

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  pyproject.toml
.git-hooks/: README.md  post-checkout.sh  post-merge.sh
.github/workflows/: ci-cd.yaml
alembic/: env.py
alembic/versions/: 001_initial.py  002_scheduled_tasks.py  003_gang_scheduling.py  004_multi_tenant.py
deepiri_zepgpu/: __init__.py  cli.py  config.py
deepiri_zepgpu/api/: __init__.py  cancel.py  pipelines.py  query.py  submit.py
deepiri_zepgpu/api/server/: __init__.py  dependencies.py  main.py  websocket_manager.py
deepiri_zepgpu/api/server/routes/: __init__.py  cloud.py  gang_scheduling.py  gpu.py  health.py  namespaces.py  pipelines.py  schedules.py  tasks.py  users.py  websocket.py
deepiri_zepgpu/cloud/: __init__.py  manager.py
deepiri_zepgpu/cloud/providers/: __init__.py  aws.py  base.py  lambda_labs.py  runpod.py
deepiri_zepgpu/core/: executor.py  gpu_manager.py  pipeline_manager.py  scheduler.py  task.py
deepiri_zepgpu/database/: __init__.py  session.py
deepiri_zepgpu/database/models/: __init__.py  audit_log.py  base.py  gang_scheduling.py  gpu_device.py  namespace.py  pipeline.py  scheduled_task.py  scheduled_task_run.py  task.py  user.py  user_quota.py
deepiri_zepgpu/database/repositories/: __init__.py  audit_repository.py  gang_repository.py  gpu_repository.py  namespace_repository.py  pipeline_repository.py  schedule_repository.py  task_repository.py  user_repository.py
deepiri_zepgpu/monitoring/: __init__.py  alerts.py  dashboard.py  logger.py  metrics.py
deepiri_zepgpu/queue/: __init__.py  beat_sync.py  celery_app.py  redis_queue.py  tasks.py
deepiri_zepgpu/resources/: __init__.py
deepiri_zepgpu/resources/datasets/: __init__.py
deepiri_zepgpu/resources/kernel_cache/: __init__.py  kernel_cache.py
deepiri_zepgpu/resources/models/: __init__.py  model_cache.py
deepiri_zepgpu/security/: __init__.py  access_control.py  sandbox.py  user_management.py
deepiri_zepgpu/storage/: __init__.py  result_store.py  s3_client.py
deepiri_zepgpu/utils/: async_helpers.py  gpu_utils.py  serialization.py  time_utils.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: api_reference.md  architecture.md
docs/tutorials/: basic_task_submission.md  monitoring.md  multi_task_pipeline.md
examples/: cupy_kernel_example.py  monte_carlo_simulation.py  multi_task_pipeline.py  neural_ode_pipeline.py  pytorch_example.py
k8s/: deployment.yaml
notebooks/: GPU_task_demo.ipynb  PINN_simulation.ipynb
tests/: test_executor.py  test_gpu_manager.py  test_scheduler.py  test_security.py  test_task_submission.py
zepgpu-ui/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
zepgpu-ui/src/: App.tsx  index.css  main.tsx
zepgpu-ui/src/api/: client.ts
zepgpu-ui/src/components/: Layout.tsx
zepgpu-ui/src/pages/: Alerts.tsx  Cloud.tsx  Control.tsx  Dashboard.tsx  GPUs.tsx  Login.tsx  Metrics.tsx  Namespaces.tsx  NewTask.tsx  Pipelines.tsx  Register.tsx  Schedules.tsx  TaskDetail.tsx  Tasks.tsx  Users.tsx
zepgpu-ui/src/stores/: authStore.ts
zepgpu-ui/src/types/: index.ts
